--- a/UI/.swiftpm/xcode/xcshareddata/xcschemes/UI.xcscheme
+++ b/UI/.swiftpm/xcode/xcshareddata/xcschemes/UI.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2699EEFC29D93AD00030ACCD"
-               BuildableName = "CardApp.app"
-               BlueprintName = "CardApp"
-               ReferencedContainer = "container:CardApp.xcodeproj">
+               BlueprintIdentifier = "UI"
+               BuildableName = "UI"
+               BlueprintName = "UI"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,24 +32,10 @@
       <CodeCoverageTargets>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2699EEFC29D93AD00030ACCD"
-            BuildableName = "CardApp.app"
-            BlueprintName = "CardApp"
-            ReferencedContainer = "container:CardApp.xcodeproj">
-         </BuildableReference>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Game"
-            BuildableName = "Game"
-            BlueprintName = "Game"
-            ReferencedContainer = "container:Game">
-         </BuildableReference>
-         <BuildableReference
-            BuildableIdentifier = "primary"
             BlueprintIdentifier = "UI"
             BuildableName = "UI"
             BlueprintName = "UI"
-            ReferencedContainer = "container:UI">
+            ReferencedContainer = "container:">
          </BuildableReference>
       </CodeCoverageTargets>
       <Testables>
@@ -57,20 +43,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "GameTests"
-               BuildableName = "GameTests"
-               BlueprintName = "GameTests"
-               ReferencedContainer = "container:Game">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "UITests"
                BuildableName = "UITests"
                BlueprintName = "UITests"
-               ReferencedContainer = "container:UI">
+               ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -85,16 +61,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2699EEFC29D93AD00030ACCD"
-            BuildableName = "CardApp.app"
-            BlueprintName = "CardApp"
-            ReferencedContainer = "container:CardApp.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -102,16 +68,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2699EEFC29D93AD00030ACCD"
-            BuildableName = "CardApp.app"
-            BlueprintName = "CardApp"
-            ReferencedContainer = "container:CardApp.xcodeproj">
+            BlueprintIdentifier = "UI"
+            BuildableName = "UI"
+            BlueprintName = "UI"
+            ReferencedContainer = "container:">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
