--- a/Modules/.swiftpm/xcode/xcshareddata/xcschemes/Game.xcscheme
+++ b/Modules/.swiftpm/xcode/xcshareddata/xcschemes/Game.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "GameTests"
+               BuildableName = "GameTests"
+               BlueprintName = "GameTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
