--- a/CardApp.xcodeproj/xcshareddata/xcschemes/CardApp.xcscheme
+++ b/CardApp.xcodeproj/xcshareddata/xcschemes/CardApp.xcscheme
@@ -32,16 +32,16 @@
       <CodeCoverageTargets>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2699EEFC29D93AD00030ACCD"
-            BuildableName = "CardApp.app"
-            BlueprintName = "CardApp"
-            ReferencedContainer = "container:CardApp.xcodeproj">
-         </BuildableReference>
-         <BuildableReference
-            BuildableIdentifier = "primary"
             BlueprintIdentifier = "Game"
             BuildableName = "Game"
             BlueprintName = "Game"
+            ReferencedContainer = "container:Modules">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "Inventory"
+            BuildableName = "Inventory"
+            BlueprintName = "Inventory"
             ReferencedContainer = "container:Modules">
          </BuildableReference>
          <BuildableReference
@@ -87,6 +87,16 @@
                BlueprintIdentifier = "UITests"
                BuildableName = "UITests"
                BlueprintName = "UITests"
+               ReferencedContainer = "container:Modules">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "InventoryTests"
+               BuildableName = "InventoryTests"
+               BlueprintName = "InventoryTests"
                ReferencedContainer = "container:Modules">
             </BuildableReference>
          </TestableReference>
